--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   },
   "homepage": "https://github.com/Tommy-f/rest-tdd#readme",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest": "^27.3.1",
     "mongodb-memory-server": "^8.0.2",
     "mongoose": "^6.0.13",
     "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.7"
   }
 }
