--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,10 +25,13 @@
     "jest": "^27.3.1",
     "mongodb-memory-server": "^8.0.2",
     "mongoose": "^6.0.13",
+    "supertest": "^6.1.6",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.11.7"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.7",
+    "@types/supertest": "^2.0.11"
   }
 }
