--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
-    "@types/supertest": "^2.0.11"
+    "@types/supertest": "^2.0.11",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0"
   }
 }
